--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,24 +4,29 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "extremal-packings"
-version = "0.1.0"
-description = "Análisis geométrico y espectral de configuraciones de discos unitarios tangentes"
+version = "0.1.0"  # Versión inicial
+description = "Análisis geométrico y espectral de configuraciones extremales de discos tangentes"
 readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
 authors = [
-    {name = "Fabián Andrés Henry Vilaxa", email = "fabian.henry.vilaxa@alumnos.uta.cl"},
-    {name = "Jose Ayala Hoffman", email = "jayalhoff@gmail.com"}
+    {name = "Fabián Andrés Henry Vilaxa", email = "tu-email@ejemplo.com"},
+    {name = "Jose Ayala Hoffman"}
 ]
-keywords = ["disk packing", "geometry", "spectral analysis", "rigidity", "convex hull"]
+keywords = ["geometry", "disk packing", "rigid configurations", "spectral analysis", "contact graphs"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
-    "Topic :: Scientific/Engineering :: Mathematics",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Scientific/Engineering :: Mathematics",
+    "Topic :: Scientific/Engineering :: Physics",
 ]
-
 dependencies = [
     "numpy>=1.20.0",
     "scipy>=1.7.0",
